Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.7.2
-
Fix Version/s: Qt Creator 4.11.0-beta2
-
Component/s: Debugger
-
Environment:Qt Creator 4.7
-
Platform/s:
-
Commits:a574706d2968b637fd1affba591193cc3c64dd0f
Description
uWe are creating a plugin to set up remote debugging configuration. From this plugin, we are trying to auto set "attach and startup commands" in Qt Creator from below menu options
Tools->Options->Debugger->GDB
There are two edit fields with "Additional Startup Commands" and "Additional Attach Commands" here and we are looking for some interfaces exposed from debugger plugins to set these fields automatically, which is not available currently
Please let us know if there are any alternate ways to set them.